--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.5.10"
 [deps]
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
@@ -21,6 +22,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 Adapt = "4.3.0"
 BlockArrays = "0.16, 1"
+CUDA = "5.7.3"
 CircularArrays = "1"
 Distances = "0.10"
 FillArrays = "0.10, 0.11, 0.12, 0.13, 1"
