--- a/Project.toml
+++ b/Project.toml
@@ -1,30 +1,18 @@
-authors = ["Francesc Verdugo <f.verdugo.rojano@vu.nl> and contributors"]
 name = "PartitionedArrays"
 uuid = "5a9dfac6-5c52-46f7-8278-5e2210713be9"
+authors = ["Francesc Verdugo <f.verdugo.rojano@vu.nl> and contributors"]
 version = "0.5.10"
-
-[compat]
-Adapt = "4.3.0"
-BlockArrays = "0.16, 1"
-CUDA = "5.7.3"
-CircularArrays = "1"
-Distances = "0.10"
-FillArrays = "0.10, 0.11, 0.12, 0.13, 1"
-IterativeSolvers = "0.9"
-MPI = "0.16, 0.17, 0.18, 0.19, 0.20"
-MPIPreferences = "0.1.11"
-SparseMatricesCSR = "0.6"
-StaticArrays = "1"
-julia = "1.1"
 
 [deps]
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
@@ -33,6 +21,22 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseMatricesCSR = "a0a7dd2c-ebf4-11e9-1f05-cf50bc540ca1"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
+[compat]
+Adapt = "4.3.0"
+BlockArrays = "0.16, 1"
+CUDA = "5.7.3"
+CircularArrays = "1"
+DataFrames = "1.7.0"
+Distances = "0.10"
+FillArrays = "0.10, 0.11, 0.12, 0.13, 1"
+IterativeSolvers = "0.9"
+JSON3 = "1.14.2"
+MPI = "0.16, 0.17, 0.18, 0.19, 0.20"
+MPIPreferences = "0.1.11"
+SparseMatricesCSR = "0.6"
+StaticArrays = "1"
+julia = "1.1"
 
 [extras]
 CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
